--- a/src/js/index.scss
+++ b/src/js/index.scss
@@ -381,6 +381,7 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   padding: 15px 15px;
   border-bottom: 1px solid #e6ecf3;
   -webkit-border-radius: 0 3px 0 0;
